# Muninn

./: .coverage  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CLAUDE.md  README.md  RELEASING.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: docs_deploy.yml  main_branch_push_pull.yml  publish.yml
changes/: +622-placeholder-mac.parser_updated  +acknowledgments.internal  +canonical-interface-guardrail.internal  +claude-md-local-only.internal  +docs-schemadoc.internal  +empty-str-bgp-iosxe-show-bgp-all.parser_updated  +empty-str-bgp-iosxe-show-ip-bgp.parser_updated  +empty-str-bgp-nxos-show-ip-bgp.parser_updated  +empty-str-ios-show-cdp-neighbors-detail.parser_updated  +empty-str-ios-show-interfaces.parser_updated  +empty-str-ios-show-inventory.parser_updated  +empty-str-ios-show-ip-bgp-advertised.parser_updated  +empty-str-ios-show-vlan.parser_updated  +empty-str-iosxe-show-stackwise-virtual.parser_updated  +empty-str-nokia-show-port.parser_updated  +empty-string-guard.internal  +fixture-json-pipe-key-check.internal  +historical-ios-parser-coverage.parser_added  +historical-iosxe-parser-coverage.parser_added  +historical-nxos-parser-coverage.parser_added  +ios-cdp-neighbors-detail-keyed.breaking  +iosxe-stackwise-virtual-neighbors-ports.breaking  +iosxe-track-keyed.breaking  +list-of-dicts-convention-test.internal  +multi-vendor-os-scaffolding.core_added  +nxos-cdp-neighbors-detail-keyed.breaking  +nxos-ipv6-interface-brief-keyed.breaking  +nxos-show-vlan-keyed.breaking  +parser-library-details.core_added  +parser-registration-docs.internal  +schema-doc-annotated.core_added  +standby-brief-exemption.internal  +svl-link-ports-dict.breaking  +svl-neighbors-ports-dict.breaking  +unused-type-ignore.internal  1.breaking  1.core_added  225.parser_added  282.parser_added  283.parser_added  (+327 more)
changes/core_fixed/: 670.md
design/: index.html
developer-guide/parser-registration/: index.html
developer-guide/testing-parsers/: index.html
developer-guide/writing-parsers/: index.html
docs/: 01-design-principles.md  02-testing-strategy.md  03-parser-registration.md  design.md  index.md  library.md
docs/developer-guide/: parser-registration.md  testing-parsers.md  writing-parsers.md
docs/getting-started/: installation.md  quickstart.md
docs/user-guide/: configuration.md  local-parsers.md
getting-started/installation/: index.html
getting-started/quickstart/: index.html
scripts/: generate_catalog.py  test_iosxe_live.py
search/: search_index.json
site/: catalog.md
site/developer-guide/: writing-parsers.md
site/getting-started/: installation.md
site/user-guide/: configuration.md  local-parsers.md
src/muninn/: __init__.py  config.py  core.py  exceptions.py  loader.py  os.py  parser.py  patterns.py  registry.py  runtime.py  schema_doc.py  tags.py  utils.py
src/muninn/parsers/: __init__.py
src/muninn/parsers/arista_eos/: __init__.py  show_interfaces_status.py  show_ip_arp.py  show_ip_route.py  show_lldp_neighbors.py  show_version.py
src/muninn/parsers/cisco_iosxr/: __init__.py  show_bgp_summary.py  show_interfaces_brief.py  show_ip_route.py  show_ospf_neighbor.py  show_version.py
src/muninn/parsers/ios/: __init__.py  _acl_common.py  _session_table.py  ping.py  show_access_list.py  show_access_session.py  show_adjacency.py  show_aliases.py  show_archive.py  show_arp.py  show_authentication_sessions.py  show_authentication_sessions_method_details.py  show_bfd_neighbors_details.py  show_cdp_neighbors.py  show_cdp_neighbors_detail.py  show_crypto_ipsec_sa_detail.py  show_crypto_pki_certificates.py  show_crypto_session_detail.py  show_dot1x_all.py  show_endpoint_tracker.py  show_environment.py  show_environment_power_all.py  show_environment_temperature.py  show_etherchannel_summary.py  show_interface_link.py  show_interface_transceiver.py  show_interfaces.py  show_inventory.py  show_ip_arp.py  show_ip_bgp_neighbors_advertised-routes.py  show_ip_bgp_summary.py  show_ip_bgp_vpnv4_all_neighbors.py  show_ip_dhcp_binding.py  show_ip_eigrp_topology.py  show_ip_mroute.py  show_ip_nat_translations.py  show_ip_ospf_database.py  show_ip_ospf_database_network.py  show_ip_ospf_database_router.py  show_ip_ospf_interface.py  (+52 more)
src/muninn/parsers/iosxe/: __init__.py  dir.py  show_avb_domain.py  show_bgp_all.py  show_bgp_all_detail.py  show_bgp_all_summary.py  show_bgp_summary.py  show_boot.py  show_bootvar.py  show_caller_summary.py  show_cdp.py  show_cisp_summary.py  show_clock.py  show_cloud_mgmt.py  show_cloud_mgmt_connect.py  show_control_cpu.py  show_controller_ethernet_controller.py  show_dhcp_lease.py  show_diagnostic_status.py  show_dlep_clients.py  show_dlep_counters.py  show_dlep_neighbor.py  show_dmvpn.py  show_dns_lookup_cache.py  show_endpoint_tracker_records.py  show_endpoint_tracker_static_route.py  show_endpoint_tracker_tracker_group.py  show_environment_all.py  show_environment_status.py  show_esmc.py  show_esmc_detail.py  show_file_systems.py  show_gnxi_state.py  show_graceful_reload.py  show_interface_status.py  show_ip_bgp.py  show_ip_bgp_neighbors.py  show_ip_dhcp_snooping_binding.py  show_ip_dhcp_snooping_statistics.py  show_ip_eigrp_interfaces.py  (+104 more)
src/muninn/parsers/juniper_junos/: __init__.py  show_arp_no_resolve.py  show_bgp_summary.py  show_interfaces.py  show_ospf_neighbor.py  show_version.py
src/muninn/parsers/linux/: __init__.py  arp_a.py  ifconfig.py  ip_address_show.py  ip_link_show.py  ip_route_show.py
src/muninn/parsers/nokia_sros/: __init__.py  show_lag.py  show_port.py  show_router_bgp_summary_family.py  show_router_interface.py  show_service_sap_using.py
src/muninn/parsers/nxos/: __init__.py  (+73 more)
tests/: test_config.py  test_diagnostics.py  test_loader.py  test_os.py  test_parse_policy.py  test_patterns.py  test_registry.py
tests/parsers/: conftest.py  list_of_dicts_allowlist.yaml  test_empty_output.py  test_expected_normalization.py  test_fixture_json_conventions.py  test_fixture_placeholder_sentinels.py  test_parsers.py
user-guide/configuration/: index.html
user-guide/local-parsers/: index.html
(+2298 files in other folders)
