[project]
name = "muninn"
version = "0.1.0"
description = "A standalone CLI output parser library for network devices"
readme = "README.md"
authors = [
    { name = "Christopher Hart", email = "christopherjhart95@gmail.com" },
    { name = "Andrea Testino", email = "aitestino@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "netutils>=1.15.2",
    "pydantic-settings>=2.13.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "bandit>=1.9.2",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.13",
    "towncrier>=25.8.0",
    "ty>=0.0.12",
    "xenon>=0.9.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "W",  # pycodestyle warnings
    "C90",# flake8-mccabe complexity
    "N",  # pep8-naming
    "UP", # pyupgrade
    "ANN",# flake8-annotations
    "D",  # pydocstyle
    "T",  # flake8-print (includes T201 for pdb, replacing debug-statements hook)
]

[tool.ruff.lint.per-file-ignores]
"src/muninn/parsers/**/*-*.py" = ["N999"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.towncrier]
directory = "changes"
filename = "CHANGELOG.md"
title_format = "## {version} - {project_date}"
issue_format = "[#{issue}](https://github.com/ChartinoLabs/Muninn/pull/{issue})"
underlines = ["", "", ""]

[[tool.towncrier.type]]
directory = "parser_added"
name = "Added Parsers"
showcontent = true

[[tool.towncrier.type]]
directory = "parser_updated"
name = "Updated Parsers"
showcontent = true

[[tool.towncrier.type]]
directory = "parser_fixed"
name = "Fixed Parsers"
showcontent = true

[[tool.towncrier.type]]
directory = "core_added"
name = "Core Features"
showcontent = true

[[tool.towncrier.type]]
directory = "core_fixed"
name = "Core Fixes"
showcontent = true

[[tool.towncrier.type]]
directory = "breaking"
name = "Breaking Changes"
showcontent = true

[[tool.towncrier.type]]
directory = "internal"
name = "Internal"
showcontent = true
