[project]
name = "muninn-parsers"
dynamic = ["version"]
description = "A standalone CLI output parser library for network devices"
readme = "README.md"
authors = [
    { name = "Christopher Hart", email = "christopherjhart95@gmail.com" },
    { name = "Andrea Testino", email = "aitestino@gmail.com"}
]
requires-python = ">=3.11"
license = "Apache-2.0"
keywords = ["network", "parser", "cli", "cisco", "nxos", "iosxe", "ios", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Telecommunications Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Networking",
]
dependencies = [
    "netutils>=1.15.2",
    "pydantic-settings>=2.13.1",
]

[project.urls]
Homepage = "https://github.com/ChartinoLabs/Muninn"
Repository = "https://github.com/ChartinoLabs/Muninn"
Issues = "https://github.com/ChartinoLabs/Muninn/issues"
Changelog = "https://github.com/ChartinoLabs/Muninn/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/muninn"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/muninn/_version.py"

[dependency-groups]
dev = [
    "bandit>=1.9.2",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.13",
    "towncrier>=25.8.0",
    "ty>=0.0.12",
    "xenon>=0.9.3",
]
docs = [
    "mkdocs-material>=9.7.6",
]

[tool.ty.rules]
# Suppressed rules introduced by ty 0.0.25. Each has a tracking issue
# to fix the underlying code and re-enable the rule.
# See: https://github.com/ChartinoLabs/Muninn/issues?q=label:ty-strictness
missing-typed-dict-key = "ignore"  # #673 — parsers build TypedDicts incrementally
invalid-return-type = "ignore"     # #674 — dict returned where TypedDict expected
invalid-key = "ignore"             # #675 — dynamic key subscript on TypedDict
invalid-argument-type = "ignore"   # #676 — type narrows not yet recognized
invalid-assignment = "ignore"      # #677 — assignments to TypedDict fields via dynamic keys
no-matching-overload = "ignore"    # #678 — setdefault/dict method overload mismatches
call-non-callable = "ignore"       # #679 — false positives on TypedDict value callables
unresolved-attribute = "ignore"    # #680 — attribute access on union types

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "W",  # pycodestyle warnings
    "C90",# flake8-mccabe complexity
    "N",  # pep8-naming
    "UP", # pyupgrade
    "ANN",# flake8-annotations
    "D",  # pydocstyle
    "T",  # flake8-print (includes T201 for pdb, replacing debug-statements hook)
]

[tool.ruff.lint.per-file-ignores]
# Parser filenames preserve hyphens from CLI commands (e.g. show_spanning-tree_root.py).
"src/muninn/parsers/**/*-*.py" = ["N999"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.towncrier]
directory = "changes"
filename = "CHANGELOG.md"
title_format = "## {version} - {project_date}"
issue_format = "[#{issue}](https://github.com/ChartinoLabs/Muninn/pull/{issue})"
underlines = ["", "", ""]

[[tool.towncrier.type]]
directory = "parser_added"
name = "Added Parsers"
showcontent = true

[[tool.towncrier.type]]
directory = "parser_updated"
name = "Updated Parsers"
showcontent = true

[[tool.towncrier.type]]
directory = "parser_fixed"
name = "Fixed Parsers"
showcontent = true

[[tool.towncrier.type]]
directory = "core_added"
name = "Core Features"
showcontent = true

[[tool.towncrier.type]]
directory = "core_fixed"
name = "Core Fixes"
showcontent = true

[[tool.towncrier.type]]
directory = "breaking"
name = "Breaking Changes"
showcontent = true

[[tool.towncrier.type]]
directory = "internal"
name = "Internal"
showcontent = true
